# sh_ws

./: CommandConfig.txt  仿真系统配置.docx
EndToEnd_FPV/: dataset.py  myset.txt
EndToEnd_FPV/LeRobot/: convert_to_lerobot_datafileset.py  convert_to_lerobot_dataset.py
FPV_DeepLearning/: config.py  ddpg.py  env.py  evaluate_main.py  evaluate_svgif.py  requirements.txt  train.py
FPV_DeepLearning/models/: uav_actor.pth  uav_critic.pth
qjwdds/: CMakeLists.txt  package.xml
qjwdds/gz/models/: actball.sdf  loop_trajectory.sh  sptball.sdf
qjwdds/launch/: fpv_control_intercept.launch.py  fpv_control_prepare.launch.py  fpv_control_target.launch.py  simulate_1.launch.py  simulate_3.launch.py  simulate_4.launch.py  test_launch.launch.py
qjwdds/msg/: ImageDeviation.msg
qjwdds/src/control/: sh_vision_control_s.cpp  test_c.cpp  virtual_control.cpp  vision_control_PsiRate.cpp
qjwddspy/: package.xml  setup.cfg  setup.py
qjwddspy/qjwddspy/: data_recorder.py  data_recorder_virtual.py  daterecoeder_e2e.py  e2e_model.pth  gazebo_imageball_dec_pub.py  gazebo_redball_dec_pub.py  test_py.py  torch_test.py  uav_actor.pth  usb_ca_0515.yaml  vision_control_ddpg.py  vision_control_e2e.py
qjwddspy/qjwddspy/models/: baylands_e2e_model_1.pth  default_e2e_model_1.pth  default_e2e_model_2.pth  default_e2e_model_3.pth
